Adicionando a tabela e as imagens a seções da área de artigo no site

--- a/bloco_3/dia_4/style.css
+++ b/bloco_3/dia_4/style.css
@@ -1,3 +1,17 @@
+
+body {
+	background-color: #f5f5d5;
+}
+
 .scientific-name {
 	font-style: italic;
+}
+
+table , td , th{
+	border: 1px solid #000000;
+}
+
+table th {
+	text-align: left;
+	width: 5px;
 }
