Refatorando exercicio do dia 1 bloco 6

--- a/INTRODUÇÃO/BLOCO_6/DIA_1/style.css
+++ b/INTRODUÇÃO/BLOCO_6/DIA_1/style.css
@@ -40,3 +40,10 @@ input, select, textarea {
   padding: 30px;
   text-align: left;
 }
+
+.radio {
+  display: inline;
+  height: 15px;
+  margin-left: 70px;
+  width: 15px;
+}
