--- a/INTRODUÇÃO/BLOCO_6/DIA_1/style.css
+++ b/INTRODUÇÃO/BLOCO_6/DIA_1/style.css
@@ -42,7 +42,7 @@ input, select, textarea {
 }
 
 .radio {
-  display: inline;
+  display: inline-block;
   height: 15px;
   margin-left: 70px;
   width: 15px;
